--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4.1.1
 
+    - name: Install ubunto directory 
+      run: sudo apt-get install libgtk-3-0 libblkid1 liblzma5
+
+
     - name: Run a command
       run: |
          ./build/linux/x64/release/bundle/readme_tier_list_generator 
