--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Run a command
       run: |
-         ./build/linux/x64/release/bundle/readme_tier_list_generator 
+         ./build/linux/x64/release/bundle/readme_tier_list_generator &
 
 
     - name: Commit and Push
