--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,14 @@ jobs:
       run: |
         Xvfb :1 & export DISPLAY=:1; ./build/linux/x64/release/bundle/readme_tier_list_generator
 
+    - name: ls
+      run: ls *.png -l -h
 
-    - name: Commit and Push
-      run: |
-        git config user.name 'VotreNom'
-        # git config --global user.email 'votreemail@example.com'
-        git add .
-        git commit -m "Ajout du fichier généré"
-        git push
+
+    # - name: Commit and Push
+    #   run: |
+    #     git config user.name 'VotreNom'
+    #     # git config --global user.email 'votreemail@example.com'
+    #     git add .
+    #     git commit -m "Ajout du fichier généré"
+    #     git push
