--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
     - name: ls
       run: ls *.png -l -h
 
+    - name: Get git info
+      run: git remote -v
+
 
     # - name: Commit and Push
     #   run: |
