--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
       run: git remote -v
 
 
-    # - name: Commit and Push
-    #   run: |
-    #     git config user.name 'VotreNom'
-    #     # git config --global user.email 'votreemail@example.com'
-    #     git add .
-    #     git commit -m "Ajout du fichier généré"
-    #     git push
+    - name: Commit and Push
+      run: |
+        git config user.name 'Automation'
+        git config l user.email 'automation@example.com'
+        git add .
+        git commit -m "Ajout du fichier généré"
+        git push
