--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Commit and Push
       run: |
         git config user.name 'Automation'
-        git config l user.email 'automation@example.com'
+        git config user.email 'automation@example.com'
         git add .
         git commit -m "Ajout du fichier généré"
         git push
