--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,15 +29,15 @@ jobs:
         git config user.name 'Automation'
         git config user.email 'automation@example.com'
         git add .
-        git commit -m "Ajout du fichier généré"
+        git commit -m "Automation create image"
         
-    - name: Set up Git repository
-      run: |
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ObNitram/readme_tier_list_generator.git
+    # - name: Set up Git repository
+    #   run: |
+    #     git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ObNitram/readme_tier_list_generator.git
 
 
     - name: Push 
       run: |
         git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # env:
+      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
